@@ -1,7 +1,8 @@
 application: my-app
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: no
 
 handlers:
 - url: /.*
